<resources>
    <string name="app_name">A280922market</string>
    <string name="sales_icon">Sales</string>
    <string name="contacts_text">Контакты</string>
    <string name="about_text">Про нас</string>
    <string name="main_scene_text">Главная</string>
    <string name="logo_of_app_1">Courses</string>
    <string name="logo_of_app_2">App</string>
    <string name="course_start_date">Старт обучения:</string>
    <string name="course_level">Уровень:</string>
    <string name="course_desc">За программу вы изучите построние графических приложений под ПК, разработку веб сайтов на основе Java Spring Boot, изучите построение полноценных андроид приложений и отлично изучите сам язык Джава!</string>
    <string name="activity_desc">Мы занимаемся предоставлением курсоов для обучения разных языков программирования и разработки ПО. Пройдя наш курс вы олучите необходимые знания для продвижения дальше по карьере программирование в той или иной облсти.</string>
    <string name="activity_contacts">Почта: Course.apps@gmail.com \nТелефон: +7992458651* \nТелеграм: @course_apps</string>
</resources>